fix hfill overflow

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -40,7 +40,12 @@
   box-sizing: border-box
 
   .hfill
-    flex-wrap: wrap
+    flex-wrap: nowrap
+    li:first-child
+      flex: 1
+      min-width: 0
+    li:nth-child(2)
+      flex-shrink: 0
 
   h2
     margin-top: 0
